# auto_requirements_tool

./: .gitignore  README.md  environment.yml  main.py  pyproject.toml  requirements.txt
auto_reqs/: classifier.py  cli.py  config.py  resolver.py  scanner.py  stdlib_utils.py  updater.py  utils.py
auto_reqs.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_config.py  test_resolver.py  test_scanner.py  test_stdlib_utils.py  test_updater.py  test_utils.py
